<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#78909C"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/facileB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="#9E9E9E"
        android:fontFamily="@font/font"
        android:hapticFeedbackEnabled="false"
        android:text="@string/facile"
        app:layout_constraintBottom_toTopOf="@+id/moyenB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tutoB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="#9E9E9E"
        android:fontFamily="@font/font"
        android:hapticFeedbackEnabled="false"
        android:text="@string/tuto"
        app:layout_constraintBottom_toTopOf="@+id/facileB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/aproposB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:background="#9E9E9E"
        android:fontFamily="@font/font"
        android:hapticFeedbackEnabled="false"
        android:text="@string/aproposB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/moyenB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="#9E9E9E"
        android:fontFamily="@font/font"
        android:hapticFeedbackEnabled="false"
        android:text="@string/moyen"
        app:layout_constraintBottom_toTopOf="@+id/homeB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/homeB"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:background="#9E9E9E"
        android:fontFamily="@font/font"
        android:hapticFeedbackEnabled="false"
        android:text="@string/difficile"
        app:layout_constraintBottom_toTopOf="@+id/aproposB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/presTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/pres"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="381dp"
        android:layout_height="178dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logoApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_demineurv2" />

    <TextView
        android:id="@+id/nameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/font"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>